--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="uktravel1.jpg" width="100%" height="70%"/>
     </div>
     <div>
-        <h1 style="text-align:center">My Travel Diary</h1>
+        <h1 style="text-align:center; color:rgb(132, 21, 160)"><b>My Travel Diary</b></h1>
     </div>
     <div class="trips">
         <ul>
